# omen-fan

./: README.md
.github/workflows/: rust.yml
omen-fan/: Cargo.toml
omen-fan/src/: main.rs
