[package]
name = "omen-fan"
version = "0.7.0"
edition = "2024"

[dependencies]
nix = { version = "0.29", features = ["user"] }
serde = "1.0.219"
toml = "0.8.20"
iced = "0.13.1"
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[features]
default = ["default_ec", "default_mode"]
acpi_ec = []
default_ec = []
performance_mode = []
cool_mode = []
default_mode = []
fan_custom = []