[package]
name = "omen-fan-gui"
version = "0.8.0"
edition = "2024"

[dependencies]
nix = { version = "0.29", features = ["user"] }
serde = "1.0.219"
toml = "0.8.20"
iced = "0.13.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
async-std = "1.13.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[features]
default = ["default_ec"]
acpi_ec = []
default_ec = []